# window_layout_mcp

./: Cargo.toml  README.md  README_ZH.md
src/: lib.rs  main.rs
src/logic/: mod.rs  monitor.rs  window.rs
src/mcp/: mod.rs
