[package]
name = "window-layout-mcp"
authors = ["Manonloki"]
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
anyhow = "1.0.98"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }

tokio = { version = "1.45.0", features = ["full"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "transport-io",
    "server",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
